# Chancerytter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_test_run.sh  cmake.sh
.github/workflows/: test.yml
src/: CMakeLists.txt  main.cpp
src/arms/: mod2.cpp
src/conductors/: single_choice_conductor.cpp
src/environments/: mod2_fixed.cpp
src/experiments/: experiment_runner.cpp  mock_experiment.cpp  settings_fileloader.cpp
src/experts/: mod_expert.cpp
src/interfaces/: arm.h  conductor.h  environment.h  experiment.h  experiment_interface.h  expert.h  single_policy.h
src/singlepolicies/: exp3.cpp  qbl.cpp
test/: CMakeLists.txt  generaltests.h  test_main.cpp
test/experiment_test/: experiment_test.cpp
test/test_data/: test_data.in  test_experiment_settings.csv
